crates/service/tests/diagnostics/snapshots/features__diagnostics__immediates__br_table.snap
---
source: crates/service/tests/diagnostics/immediates.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 4,
          "character": 18
        },
        "end": {
          "line": 4,
          "character": 21
        }
      },
      "severity": 1,
      "code": "immediates",
      "source": "wat",
      "message": "expected identifier or unsigned integer"
    },
    {
      "range": {
        "start": {
          "line": 4,
          "character": 25
        },
        "end": {
          "line": 4,
          "character": 27
        }
      },
      "severity": 1,
      "code": "immediates",
      "source": "wat",
      "message": "expected identifier or unsigned integer"
    }
  ]
}
