crates/service/tests/diagnostics/snapshots/features__diagnostics__immediates__expected_instr.snap
---
source: crates/service/tests/diagnostics/immediates.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 0,
          "character": 36
        },
        "end": {
          "line": 0,
          "character": 37
        }
      },
      "severity": 1,
      "code": "immediates",
      "source": "wat",
      "message": "unexpected immediate"
    },
    {
      "range": {
        "start": {
          "line": 0,
          "character": 27
        },
        "end": {
          "line": 0,
          "character": 52
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [i32, i32], found [i32]"
    }
  ]
}
