crates/service/tests/diagnostics/snapshots/features__diagnostics__immediates__float.snap
---
source: crates/service/tests/diagnostics/immediates.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 4,
          "character": 19
        },
        "end": {
          "line": 4,
          "character": 21
        }
      },
      "severity": 1,
      "code": "immediates",
      "source": "wat",
      "message": "expected floating-point number"
    },
    {
      "range": {
        "start": {
          "line": 5,
          "character": 9
        },
        "end": {
          "line": 5,
          "character": 18
        }
      },
      "severity": 1,
      "code": "immediates",
      "source": "wat",
      "message": "missing floating-point number"
    },
    {
      "range": {
        "start": {
          "line": 6,
          "character": 9
        },
        "end": {
          "line": 6,
          "character": 18
        }
      },
      "severity": 1,
      "code": "immediates",
      "source": "wat",
      "message": "missing floating-point number"
    }
  ]
}
