crates/service/tests/diagnostics/snapshots/features__diagnostics__immediates__index.snap
---
source: crates/service/tests/diagnostics/immediates.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 3,
          "character": 14
        },
        "end": {
          "line": 3,
          "character": 16
        }
      },
      "severity": 1,
      "code": "immediates",
      "source": "wat",
      "message": "expected identifier or unsigned integer"
    },
    {
      "range": {
        "start": {
          "line": 4,
          "character": 19
        },
        "end": {
          "line": 4,
          "character": 22
        }
      },
      "severity": 1,
      "code": "immediates",
      "source": "wat",
      "message": "expected identifier or unsigned integer"
    },
    {
      "range": {
        "start": {
          "line": 5,
          "character": 19
        },
        "end": {
          "line": 5,
          "character": 22
        }
      },
      "severity": 1,
      "code": "immediates",
      "source": "wat",
      "message": "expected identifier or unsigned integer"
    },
    {
      "range": {
        "start": {
          "line": 6,
          "character": 20
        },
        "end": {
          "line": 6,
          "character": 23
        }
      },
      "severity": 1,
      "code": "immediates",
      "source": "wat",
      "message": "expected identifier or unsigned integer"
    },
    {
      "range": {
        "start": {
          "line": 7,
          "character": 20
        },
        "end": {
          "line": 7,
          "character": 22
        }
      },
      "severity": 1,
      "code": "immediates",
      "source": "wat",
      "message": "expected identifier or unsigned integer"
    },
    {
      "range": {
        "start": {
          "line": 8,
          "character": 9
        },
        "end": {
          "line": 8,
          "character": 13
        }
      },
      "severity": 1,
      "code": "immediates",
      "source": "wat",
      "message": "missing identifier or unsigned integer"
    },
    {
      "range": {
        "start": {
          "line": 9,
          "character": 9
        },
        "end": {
          "line": 9,
          "character": 18
        }
      },
      "severity": 1,
      "code": "immediates",
      "source": "wat",
      "message": "missing identifier or unsigned integer"
    },
    {
      "range": {
        "start": {
          "line": 10,
          "character": 9
        },
        "end": {
          "line": 10,
          "character": 18
        }
      },
      "severity": 1,
      "code": "immediates",
      "source": "wat",
      "message": "missing identifier or unsigned integer"
    }
  ]
}
