crates/service/tests/diagnostics/snapshots/features__diagnostics__immediates__mem_arg.snap
---
source: crates/service/tests/diagnostics/immediates.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 3,
          "character": 18
        },
        "end": {
          "line": 3,
          "character": 19
        }
      },
      "severity": 1,
      "code": "immediates",
      "source": "wat",
      "message": "expected memory argument"
    },
    {
      "range": {
        "start": {
          "line": 4,
          "character": 19
        },
        "end": {
          "line": 4,
          "character": 20
        }
      },
      "severity": 1,
      "code": "immediates",
      "source": "wat",
      "message": "expected memory argument"
    },
    {
      "range": {
        "start": {
          "line": 5,
          "character": 15
        },
        "end": {
          "line": 5,
          "character": 23
        }
      },
      "severity": 1,
      "code": "immediates",
      "source": "wat",
      "message": "missing memory argument"
    }
  ]
}
