crates/service/tests/diagnostics/snapshots/features__diagnostics__immediates__mem_arg_and_index.snap
---
source: crates/service/tests/diagnostics/immediates.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 3,
          "character": 25
        },
        "end": {
          "line": 3,
          "character": 26
        }
      },
      "severity": 1,
      "code": "immediates",
      "source": "wat",
      "message": "expected memory argument"
    },
    {
      "range": {
        "start": {
          "line": 3,
          "character": 27
        },
        "end": {
          "line": 3,
          "character": 29
        }
      },
      "severity": 1,
      "code": "immediates",
      "source": "wat",
      "message": "expected identifier or unsigned integer"
    }
  ]
}
